Fix scrollbars on WorkflowPage

--- a/assets/css/components/WorkflowPage.scss
+++ b/assets/css/components/WorkflowPage.scss
@@ -5,7 +5,8 @@
 .workflow-root {
   display: flex;
   flex-direction: row;
-  min-height: 100vh;
+  height: 100vh;
+  overflow: hidden;
   position: fixed;
   width: 100%;
 
@@ -20,7 +21,8 @@
     flex: 1 1 auto;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    height: 100vh;
+    overflow: hidden;
   }
 
   /* Contains Modulestack and Outputpane */
@@ -28,7 +30,6 @@
     flex: 1 1 auto;
     display: flex;
     flex-direction: row;
-    min-height:100vh;
     background-color: $WF-background;
   }
 
